# JobFlow

./: .gitignore  CLAUDE.md  DB_MIGRATION_AUDIT.md  README.md  TODO.md  config.yaml  jobLists.csv  pyproject.toml  render.yaml  wsgi.py
.github/workflows/: scan-jobs.yml
.playwright-mcp/: page-2026-04-03T22-12-40-099Z.yml  page-2026-04-03T22-14-23-500Z.yml
config/: config.ci.yaml  config.example.yaml  config.yaml  job_boards.json  profile.example.txt  profile.txt
data/ci/: linkedin_jobs.json  scan_results.json  seen_jobs.json
docs/: API.md  ARCHITECTURE.md  CLI.md  DASHBOARD_AUDIT.md  DATA_MODELS.md  DEPLOYMENT.md  FRONTEND.md  SCANNING.md  SCORING.md  TAILORING.md
jobflow/: __init__.py  ai_scorer.py  cli.py  config.py  db.py  db_migrate.py  filter.py  latex.py  linkedin_store.py  models.py  scanner.py  scraper.py  tailor.py  tracker.py
jobflow/web/: __init__.py
jobflow/web/static/: style.css
jobflow/web/templates/: application_detail.html  applications.html  base.html  boards.html  dashboard.html  linkedin.html  scan.html  tailor.html
jobflow/web/templates/_partials/: application_row.html  applications_tbody.html  linkedin_row.html  linkedin_tbody.html  scan_status.html  tailor_status.html
scripts/: ai_score_local.py  backfill_ai_scores.py  mcp-bridge.js
tests/: conftest.py  test_buckets.py  test_filter.py  test_store.py  test_url_migration_db.py  test_url_normalization.py  test_web.py
